# enviroApi

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: combined.py
src/enviroApi/config/: __init__.py  compensation.json  config.json
src/enviroApi/data/: __init__.py
src/enviroApi/display/: __init__.py
src/enviroApi/hardware/: mic.py  sensors.py
src/enviroApi/math/: __init__.py
