[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "enviroApi"
version = "0.0.1"
authors = [
  { name="Duckie", email="DuckieNukeEm@gmail.com" },
]
description = "A package to add an API to the enviropi framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"